implement mockup in development

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.bg-hero{
+    background-image: url('/assets/image 1.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
